word wrap fix

--- a/static/stylesheets/5-layout/_blog_link.scss
+++ b/static/stylesheets/5-layout/_blog_link.scss
@@ -12,7 +12,18 @@
   text-decoration: none;
   color: black;
 
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-wrap: break-word;
+  /* Instead use this non-standard one: */
   word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 
   &__title {
     font-size: 1.5rem;
