--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -271,7 +271,16 @@ body {
   grid-gap: 1rem;
   text-decoration: none;
   color: black;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-wrap: break-word;
+  /* Instead use this non-standard one: */
   word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 .blog-link__title {
   font-size: 1.5rem;
